--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<br><br>
 			</div>
 		</div>
-    <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="background1.JPG" alt="Unsplashed background img 1"></div>
 	</div>
 
 <!--   Icon Section   -->
