finished work exp

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					<div class="icon-block">
 						<h2 class="center teal-text"><i class="material-icons">code</i></h2>
 						<h5 class="center">Experienced Programmer</h5>
-						<p class="center light">Comfortable writing Python, Java, Javascript, Golang, C, C++, C#, HTML, and CSS</p>
+						<p class="center light">Expert in writing Python, Java, Javascript, Golang, C, C++, C#, HTML, and CSS</p>
 					</div>
 				</div>
 			</div>
@@ -81,7 +81,7 @@
 					</div>
 					<hr>
 					<div class="icon-block">
-						<img id="fort-img" class="wow fadeInRight img-icon" src="fortuitast.png"/>
+						<img id="fort-img" class="wow fadeInLeft img-icon" src="fortuitast.png"/>
 
 					</div>
 				</div>
@@ -93,7 +93,12 @@
 							<li class="wow fadeInRight bullet">Hands on coding in Java, C#, Javascript</li>
 						</ul>
 						<h5 id="fort-text" class="wow fadeInRight center">Quality Assurance Intern</h5>
-
+						<ul>
+							<li class="wow fadeInRight bullet">Responsible for all quality assurance testing</li>
+							<li class="wow fadeInRight bullet">Wrote hundreds of automated test scripts sent to devices on the cloud</li>
+							<li class="wow fadeInRight bullet">Hands on coding in C#</li>
+							<li class="wow fadeInRight bullet">Full participation in large Software Development team</li>
+						</ul>
 				</div>
 			</div>
 		</div>
