--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div class="section no-pad-bot">
 			<div class="container">
 				<br><br>
-				<h1 id="title" class="header center teal-text accent-2">Japheth Frolick</h1>
+				<h1 id="title" class="header center white-text accent-2">Japheth Frolick</h1>
 				<div class="row center">
 					<h5> <span id="type" class="typed"></span></h5>
 				</div>
@@ -66,12 +66,20 @@
 
 
 	<div class="parallax-container valign-wrapper">
-		<div class="section no-pad-bot"></div>
-		<div class="parallax"><img src="UCSC.png" alt="Unsplashed background img 2"></div>
+		<div class="section no-pad-bot">
+			<div class="container">
+				<br><br>
+				<h1 id="title" class="header center white-text accent-2">Work Experience</h1>
+				<div class="row center">
+					<h5> <span id="type" class="typed"></span></h5>
+				</div>
+				<br><br>
+			</div>
+		</div>
+		<div class="parallax"><img src="forrest.jpg" alt="Unsplashed background img 2"></div>
 	</div>
 	<div class="container">
 		<div class="section">
-			<h1 id="title" class="header center teal-text accent-2">Work Experience</h1>
 			<br><br>
 			<div class="row">
 				<div class="col s18 m6">
@@ -103,7 +111,45 @@
 			</div>
 		</div>
 	</div>
+	<div class="parallax-container valign-wrapper">
+		<div class="section no-pad-bot">
+			<div class="container">
+				<br><br>
+				<h1 id="title" class="header center white-text accent-2">Projects</h1>
+				<div class="row center">
+					<h5> <span id="type" class="typed"></span></h5>
+				</div>
+				<br><br>
+			</div>
+		</div>
+		<div id="forrest1" class="parallax"><img src="forrest1.jpg" alt="Unsplashed background img 2"></div>
+	</div>
+	<div class="container">
+		<div class="section">
+			<br><br>
+			<div class="row">
+				<div class="col s18 m6">
+					<div class="icon-block">
+						<img id="umg-img" class="wow fadeInLeft img-icon" src="knight.png"/>
 
+					</div>
+					<hr>
+					<div class="icon-block">
+						<img id="fort-img" class="wow fadeInLeft img-icon" src="fortuitast.png"/>
+
+					</div>
+				</div>
+				<div class="col s18 m6">
+						<h5 id="umg-text" class="wow fadeInRight center">ShutterMate</h5>
+						<p class="wow fadeInRight center">An app designed to take a picture of a physical chess board, digitize it, and reccomend the next best move.</p>
+						<p class="wow fadeInRight center git"> <a href="https://github.com/eota/ShutterMate">View on GitHub!</a></p>
+						<h5 id="fort-text" class="wow fadeInRight center">Pen Pals</h5>
+						<p class="wow fadeInRight center">A social media site designed to connect book readers via common interests.</p>
+						<p class="wow fadeInRight center git"> <a href="https://github.com/abteen/Pen-Pals">View on GitHub!</a></p>
+				</div>
+			</div>
+		</div>
+	</div>
  
  </div>
          
@@ -130,7 +176,7 @@
   <script type="text/javascript" src="js/typed.js"></script>
   <script type="text/javascript">
 	var typed = new Typed(".typed", {
-		strings: ["^1000 Agile developer", "^1000 Passionate for programming", "^1000 Years of workplace experience", "^1000 Entrepreneurial", "^1000 Innovative"],
+		strings: ["^1000 Agile developer", "^1000 Passionate programmer", "^1000 Years of workplace experience", "^1000 Entrepreneurial", "^1000 Innovative"],
 		shuffle: true,
 		typeSpeed: 40,
 		backSpeed: 20,
