--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 					</div>
 					<hr>
 					<div class="icon-block">
-						<img id="fort-img" class="wow fadeInLeft img-icon" src="fortuitast.png"/>
+						<img id="fort-img" class="wow fadeInLeft img-icon" src="pen.jpeg"/>
 
 					</div>
 				</div>
