fixed on mobile

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<nav class="white" role="navigation">
 		<div class="nav-wrapper">
 			<img id="logo" src="logo.svg"/>
-			<a href="#" class="brand-logo">Japheth Frolick</a>
+			<a href="#" class="brand-logo logo-text">Japheth Frolick</a>
 		</div>
 	</nav>
 	<div id="index-banner" class="parallax-container">
@@ -79,27 +79,33 @@
 		<div class="parallax"><img src="forrest.jpg" alt="Unsplashed background img 2"></div>
 	</div>
 	<div class="container">
-		<div class="section">
+
 			<br><br>
 			<div class="row">
-				<div class="col s18 m6">
+				<div class="col s18 m6 col1">
 					<div class="icon-block">
 						<img id="umg-img" class="wow fadeInLeft img-icon" src="umg.png"/>
-
 					</div>
-					<hr>
-					<div class="icon-block">
-						<img id="fort-img" class="wow fadeInLeft img-icon" src="fortuitast.png"/>
 
-					</div>
 				</div>
-				<div class="col s18 m6">
+				<div class="col s18 m6 col1">
 						<h5 id="umg-text" class="wow fadeInRight center">Software Engineer Intern</h5>
 						<ul>
 							<li class="wow fadeInRight bullet">Assist in software architecture development, prototyping, debugging and testing</li>
 							<li class="wow fadeInRight bullet">Full participation in Agile Software Development team</li>
 							<li class="wow fadeInRight bullet">Hands on coding in Java, C#, Javascript</li>
 						</ul>
+				</div>
+			</div>
+			<hr>
+			
+			<div class="row">
+				<div class="col s18 m6 col1">
+					<div class="icon-block">
+						<img id="fort-img" class="wow fadeInLeft img-icon" src="fortuitast.png"/>
+					</div>
+				</div>
+				<div class="col s18 m6 col1">
 						<h5 id="fort-text" class="wow fadeInRight center">Quality Assurance Intern</h5>
 						<ul>
 							<li class="wow fadeInRight bullet">Responsible for all quality assurance testing</li>
@@ -109,46 +115,48 @@
 						</ul>
 				</div>
 			</div>
-		</div>
+
 	</div>
 	<div class="parallax-container valign-wrapper">
 		<div class="section no-pad-bot">
 			<div class="container">
-				<br><br>
+
 				<h1 id="title" class="header center white-text accent-2">Projects</h1>
 				<div class="row center">
 					<h5> <span id="type" class="typed"></span></h5>
 				</div>
-				<br><br>
+
 			</div>
 		</div>
 		<div id="forrest1" class="parallax"><img src="forrest1.jpg" alt="Unsplashed background img 2"></div>
 	</div>
 	<div class="container">
-		<div class="section">
-			<br><br>
-			<div class="row">
-				<div class="col s18 m6">
-					<div class="icon-block">
-						<img id="umg-img" class="wow fadeInLeft img-icon" src="knight.png"/>
-
-					</div>
-					<hr>
-					<div class="icon-block">
-						<img id="fort-img" class="wow fadeInLeft img-icon" src="pen.jpeg"/>
-
-					</div>
-				</div>
-				<div class="col s18 m6">
-						<h5 id="umg-text" class="wow fadeInRight center">ShutterMate</h5>
-						<p class="wow fadeInRight center">An app designed to take a picture of a physical chess board, digitize it, and reccomend the next best move.</p>
-						<p class="wow fadeInRight center git"> <a href="https://github.com/eota/ShutterMate">View on GitHub!</a></p>
-						<h5 id="fort-text" class="wow fadeInRight center">Pen Pals</h5>
-						<p class="wow fadeInRight center">A social media site designed to connect book readers via common interests.</p>
-						<p class="wow fadeInRight center git"> <a href="https://github.com/abteen/Pen-Pals">View on GitHub!</a></p>
+		<div class="row" style="margin-top: 40px;">
+			<div class="col s18 m6">
+				<div class="icon-block">
+					<img id="knight-img" class="wow fadeInLeft img-icon" src="knight.png"/>
 				</div>
 			</div>
+			<div class="col s18 m6">
+					<h5 id="shutter-text" class="wow fadeInRight center">ShutterMate</h5>
+					<p class="wow fadeInRight center">An app designed to take a picture of a physical chess board, digitize it, and reccomend the next best move.</p>
+					<p class="wow fadeInRight center git"> <a href="https://github.com/eota/ShutterMate">View on GitHub!</a></p>
+			</div>
 		</div>
+		<hr>
+		
+		<div class="row">
+			<div class="col s18 m6" style="margin-top: 95px;">
+				<div class="icon-block">
+					<img id="pen-img" class="wow fadeInLeft img-icon" src="pen.jpeg"/>
+				</div>
+			</div>
+			<div class="col s18 m6">
+				<h5 id="pen-text" class="wow fadeInRight center">Pen Pals</h5>
+				<p class="wow fadeInRight center">A social media site designed to connect book readers via common interests.</p>
+				<p class="wow fadeInRight center git"> <a href="https://github.com/abteen/Pen-Pals">View on GitHub!</a></p>
+			</div>
+		</div>	
 	</div>
  
  </div>
