--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
 	</div>
 	<div class="container">
 
-			<br><br>
+			<br><br><br>
+			<br>
 			<div class="row">
 				<div class="col s18 m6 col1">
 					<div class="icon-block">
@@ -98,7 +99,8 @@
 				</div>
 			</div>
 			<hr>
-			
+			<br>
+			<br>
 			<div class="row">
 				<div class="col s18 m6 col1">
 					<div class="icon-block">
@@ -115,6 +117,8 @@
 						</ul>
 				</div>
 			</div>
+			<br>
+			<br>
 
 	</div>
 	<div class="parallax-container valign-wrapper">
@@ -131,11 +135,24 @@
 		<div id="forrest1" class="parallax"><img src="forrest1.jpg" alt="Unsplashed background img 2"></div>
 	</div>
 	<div class="container">
-		<div class="row" style="margin-top: 40px;">
+
+		
+		<div class="row">
+			<div class="col s18 m6" style="margin-top: 54px;">
+					<img id="pen-img" class="wow fadeInLeft img-icon" src="pen.png"/>
+			</div>
 			<div class="col s18 m6">
-				<div class="icon-block">
+				<h5 id="pen-text" class="wow fadeInRight center">Pen Pals</h5>
+				<p class="wow fadeInRight center">A social media site designed to connect book readers via common interests.</p>
+				<p class="wow fadeInRight center git"> <a href="http://www.pen-pals.us/auth/start_page">View live site!</a></p>
+				<p class="wow fadeInRight center git"> <a href="https://github.com/abteen/Pen-Pals">View on GitHub!</a></p>
+			</div>
+		</div>	
+		<hr>
+		
+				<div class="row" style="margin-top: 40px;">
+			<div class="col s18 m6">
 					<img id="knight-img" class="wow fadeInLeft img-icon" src="knight.png"/>
-				</div>
 			</div>
 			<div class="col s18 m6">
 					<h5 id="shutter-text" class="wow fadeInRight center">ShutterMate</h5>
@@ -146,15 +163,14 @@
 		<hr>
 		
 		<div class="row">
-			<div class="col s18 m6" style="margin-top: 95px;">
-				<div class="icon-block">
-					<img id="pen-img" class="wow fadeInLeft img-icon" src="pen.jpeg"/>
-				</div>
+			<div class="col s18 m6" style="margin-top: 54px;">
+					<img id="food-img" class="wow fadeInLeft img-icon" src="food.png"/>
 			</div>
 			<div class="col s18 m6">
-				<h5 id="pen-text" class="wow fadeInRight center">Pen Pals</h5>
-				<p class="wow fadeInRight center">A social media site designed to connect book readers via common interests.</p>
-				<p class="wow fadeInRight center git"> <a href="https://github.com/abteen/Pen-Pals">View on GitHub!</a></p>
+				<h5 id="pen-text" class="wow fadeInRight center">Food Clues</h5>
+				<p class="wow fadeInRight center">A texting service for low-income individuals to find their next meal.</p>
+				<p class="wow fadeInRight center">Text your current address to +1 (702)904-8384 to find the closest establishment that excepts food stamps, or view our live map <a href="https://frozen-castle-46251.herokuapp.com/main/home">here!</a></p>
+				<p class="wow fadeInRight center git"> <a href="https://github.com/japhyf/foodClues">View on GitHub!</a></p>
 			</div>
 		</div>	
 	</div>
