--- a/index.html
+++ b/index.html
@@ -84,10 +84,7 @@
 			<br>
 			<div class="row">
 				<div class="col s18 m6 col1">
-					<div class="icon-block">
-						<img id="umg-img" class="wow fadeInLeft img-icon" src="umg.png"/>
-					</div>
-
+					<img id="umg-img" class="wow fadeInLeft img-icon" src="umg.png"/>
 				</div>
 				<div class="col s18 m6 col1">
 						<h5 id="umg-text" class="wow fadeInRight center">Software Engineer Intern</h5>
@@ -103,9 +100,7 @@
 			<br>
 			<div class="row">
 				<div class="col s18 m6 col1">
-					<div class="icon-block">
-						<img id="fort-img" class="wow fadeInLeft img-icon" src="fortuitast.png"/>
-					</div>
+					<img id="fort-img" class="wow fadeInLeft img-icon" src="fortuitast.png"/>
 				</div>
 				<div class="col s18 m6 col1">
 						<h5 id="fort-text" class="wow fadeInRight center">Quality Assurance Intern</h5>
@@ -174,8 +169,11 @@
 			</div>
 		</div>	
 	</div>
- 
- </div>
+
+	<br><br>
+  <p class="wow fadeInUp center git"> <a href="Resume 2.0.pdf" target="_blank">Click here to view my resume!</a>
+  </p>
+
          
   <footer class="page-footer white">
     <div class="container">
