fixed mobile problems

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="parallax"><img src="background1.JPG" alt="Unsplashed background img 1"></div>
 	</div>
 
-<!--   Icon Section   -->
+	<!--   Icon Section   -->
 	<div class="container">
 		<div class="section">
 			<div class="row">
@@ -49,8 +49,8 @@
 				<div class="col s12 m4">
 					<div class="icon-block">
 						<h2 class="center teal-text"><i class="material-icons">group</i></h2>
-						<h5 class="center">Knowledgable in Agile Development</h5>
-						<p class="center light">Experience working with Agile in both small and large development teams</p>
+						<h5 class="center">Agile Developer</h5>
+						<p class="center light">Experience studying and working with Agile development in both small and large development teams</p>
 					</div>
 				</div>
 				<div class="col s12 m4">
@@ -63,10 +63,10 @@
 			</div>
 		</div>
 	</div>
-
-
+	
+	<!--   Work Experience Header   -->
+	
 	<div class="parallax-container valign-wrapper">
-		<div class="section no-pad-bot">
 			<div class="container">
 				<br><br>
 				<h1 id="title" class="header center white-text accent-2">Work Experience</h1>
@@ -75,63 +75,60 @@
 				</div>
 				<br><br>
 			</div>
-		</div>
-		<div class="parallax"><img src="forrest.jpg" alt="Unsplashed background img 2"></div>
+		<div class="parallax" id="forrest" ><img src="forrest.jpg" alt="Unsplashed background img 2"></div>
 	</div>
+	
+	<!--   Work Experience Content   -->
+	
 	<div class="container">
-
-			<br><br><br>
-			<br>
-			<div class="row">
-				<div class="col s18 m6 col1">
-					<img id="umg-img" class="wow fadeInLeft img-icon" src="umg.png"/>
-				</div>
-				<div class="col s18 m6 col1">
-						<h5 id="umg-text" class="wow fadeInRight center">Software Engineer Intern</h5>
-						<ul>
-							<li class="wow fadeInRight bullet">Assist in software architecture development, prototyping, debugging and testing</li>
-							<li class="wow fadeInRight bullet">Full participation in Agile Software Development team</li>
-							<li class="wow fadeInRight bullet">Hands on coding in Java, C#, Javascript</li>
-						</ul>
-				</div>
+		<br><br><br><br>
+		<div class="row">
+			<div class="col s18 m6 col1">
+				<img id="umg-img" class="wow fadeInLeft img-icon" src="umg.png"/>
 			</div>
-			<hr>
-			<br>
-			<br>
-			<div class="row">
-				<div class="col s18 m6 col1">
-					<img id="fort-img" class="wow fadeInLeft img-icon" src="fortuitast.png"/>
-				</div>
-				<div class="col s18 m6 col1">
-						<h5 id="fort-text" class="wow fadeInRight center">Quality Assurance Intern</h5>
-						<ul>
-							<li class="wow fadeInRight bullet">Responsible for all quality assurance testing</li>
-							<li class="wow fadeInRight bullet">Wrote hundreds of automated test scripts sent to devices on the cloud</li>
-							<li class="wow fadeInRight bullet">Hands on coding in C#</li>
-							<li class="wow fadeInRight bullet">Full participation in large Software Development team</li>
-						</ul>
-				</div>
-			</div>
-			<br>
-			<br>
-
-	</div>
-	<div class="parallax-container valign-wrapper">
-		<div class="section no-pad-bot">
-			<div class="container">
-
-				<h1 id="title" class="header center white-text accent-2">Projects</h1>
-				<div class="row center">
-					<h5> <span id="type" class="typed"></span></h5>
-				</div>
-
+			<div class="col s18 m6 col1">
+				<h5 id="umg-text" class="wow fadeInRight center">Software Engineer Intern</h5>
+				<ul>
+					<li class="wow fadeInRight bullet">Assist in software architecture development, prototyping, debugging and testing</li>
+					<li class="wow fadeInRight bullet">Full participation in Agile Software Development team</li>
+					<li class="wow fadeInRight bullet">Hands on coding in Java, C#, Javascript</li>
+				</ul>
 			</div>
 		</div>
+		<br><br>
+		<hr>
+		<br><br>
+		<div class="row">
+			<div class="col s18 m6 col1">
+				<img id="fort-img" class="wow fadeInLeft img-icon" src="fortuitast.png"/>
+			</div>
+			<div class="col s18 m6 col1">
+				<h5 id="fort-text" class="wow fadeInRight center">Quality Assurance Intern</h5>
+				<ul>
+					<li class="wow fadeInRight bullet">Responsible for all quality assurance testing</li>
+					<li class="wow fadeInRight bullet">Wrote hundreds of automated test scripts sent to devices on the cloud</li>
+					<li class="wow fadeInRight bullet">Hands on coding in C#</li>
+					<li class="wow fadeInRight bullet">Full participation in large Software Development team</li>
+				</ul>
+			</div>
+		</div>
+		<br><br>
+	</div>
+	
+	<!--   Projects Header   -->
+	
+	<div class="parallax-container valign-wrapper">
+
+			<div class="container">
+				<h1 id="project-title" class="header center white-text accent-2">Projects</h1>
+			</div>
+
 		<div id="forrest1" class="parallax"><img src="forrest1.jpg" alt="Unsplashed background img 2"></div>
 	</div>
+	
+	<!--  Projects Content   -->
+	
 	<div class="container">
-
-		
 		<div class="row">
 			<div class="col s18 m6" style="margin-top: 54px;">
 					<img id="pen-img" class="wow fadeInLeft img-icon" src="pen.png"/>
@@ -176,17 +173,8 @@
 
          
   <footer class="page-footer white">
-    <div class="container">
-        <div class="w3-panel w3-card-4 w3-center" style="width:50%">
-  <span style="font-size:100px">&#10077;</span><br>
-  <p style="margin-top:-60px">
-  <i><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit ...</b></i></p>
-</div>
-    </div>
-	
     <div class="footer-copyright">
-      <div class="container">
-      </div>
+			<p style="color:black;"> © Copyright Japheth Frolick 2019 </p>
     </div>
   </footer>
 
