--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	
 	<!--   Work Experience Header   -->
 	
-	<div class="parallax-container valign-wrapper">
+	<div class="parallax-container work-experience-para-cont valign-wrapper">
 			<div class="container">
 				<br><br>
 				<h1 id="title" class="header center white-text accent-2">Work Experience</h1>
@@ -117,7 +117,7 @@
 	
 	<!--   Projects Header   -->
 	
-	<div class="parallax-container valign-wrapper">
+	<div class="parallax-container work-experience-para-cont valign-wrapper">
 
 			<div class="container">
 				<h1 id="project-title" class="header center white-text accent-2">Projects</h1>
