fixed sizing issues

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	<div class="container">
 		<br><br><br><br>
 		<div class="row">
-			<div class="col s18 m6 col1">
+			<div class="col s18 m6 col1 work-img">
 				<img id="umg-img" class="wow fadeInLeft img-icon" src="umg.png"/>
 			</div>
 			<div class="col s18 m6 col1">
@@ -99,7 +99,7 @@
 		<hr>
 		<br><br>
 		<div class="row">
-			<div class="col s18 m6 col1">
+			<div class="col s18 m6 col1 work-img">
 				<img id="fort-img" class="wow fadeInLeft img-icon" src="fortuitast.png"/>
 			</div>
 			<div class="col s18 m6 col1">
