--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 	</div>
 
 	<br><br>
-  <p class="wow fadeInUp center git"> <a href="Resume 2.0.pdf" target="_blank">Click here to view my resume!</a>
+  <p class="wow fadeInUp center git"> <a href="Resume.pdf" target="_blank">Click here to view my resume!</a>
   </p>
 
          
