--- a/index.html
+++ b/index.html
@@ -550,7 +550,11 @@
 		backDelay: 600,
 		loop: true
 	});
-	new WOW().init();
+	new WOW(
+  {
+    mobile: false
+  }
+  ).init();
 
   </script>
   </body>
