Fixed scroll on mobile

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="center title-type">
               <span id="type" class="typed black-text"></span>
             </div>
-            <a class="js-scroll-trigger" href="#about-section"><button class="landing-button landing-a" id="landing-button">View my work<i class="fas fa-arrow-right landing-arrow" id="landing-arrow"></i></button></a>
+            <a class="js-scroll-trigger-top" href="#about-section"><button class="landing-button landing-a" id="landing-button">View my work<i class="fas fa-arrow-right landing-arrow" id="landing-arrow"></i></button></a>
           </div>
         </div>
       </div>
