some refactoring and new resume

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 		<br><br><br><br><br><br>
 		<div class="row">
 			<div class="col s18 m6 col1 work-img">
-				<img id="umg-img" class="wow fadeInLeft img-icon" data-wow-delay=".8s" src="umg.png"/>
+				<img id="umg-img" class="wow fadeInLeft img-icon" data-wow-delay=".8s" src="img/umg.png"/>
 			</div>
 			<div class="col s18 m6 col1">
 				<h5 id="umg-text" class="wow fadeInRight center" data-wow-delay=".8s">Software Engineer Intern</h5>
@@ -189,7 +189,7 @@
 		<br><br>
 		<div class="row">
 			<div class="col s18 m6 col1 work-img">
-				<img id="fort-img" class="wow fadeInLeft img-icon" data-wow-delay=".8s" src="fortuitast.png"/>
+				<img id="fort-img" class="wow fadeInLeft img-icon" data-wow-delay=".8s" src="img/fortuitast.png"/>
 			</div>
 			<div class="col s18 m6 col1">
 				<h5 id="fort-text" class="wow fadeInRight center" data-wow-delay=".8s">Quality Assurance Intern</h5>
@@ -569,7 +569,7 @@
    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
      <!-- Custom scripts for this template -->
-  <script src="js/freelancer.js"></script>
+  <script src="js/index.js"></script>
  
    <!-- Plugin JavaScript -->
    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
